# arangodb-windows-libraries

./: .gitignore  Makefile  README.md
V8/: .gitignore  Makefile  build-v8.bat  clean-v8.bat  distclean.bat
V8/V8-3.16.14/: readme.txt
V8/V8-3.16.14/src/: platform.h  win32-math.cc  win32-math.h
V8/V8-3.16.14/tools/gyp/: v8_snapshot.vcxproj.filters
getopt/: CMakeLists.txt  Makefile  mygetopt.c
icu/: .gitignore  Makefile  build-icu.bat  compile-icu
icu/icu-52.1/source/: configure  configure.ac  runConfigureICU
libev/: CMakeLists.txt  Makefile
libev/libev-4.11/: ev.c  ev_select.c
linenoise/: CMakeLists.txt  Makefile
linenoise/linenoise/: linenoise.c
openssl/: Makefile
openssl/openssl-1.0.2-32/include/openssl/: opensslconf.h
openssl/openssl-1.0.2-32/lib/Debug/: ssleay32.lib
openssl/openssl-1.0.2-64/include/openssl/: opensslconf.h
openssl/openssl-1.0.2-64/lib/Release/: ssleay.lib
regex/: CMakeLists.txt  Makefile
zlib/: Makefile
zlib/zlib-1.2.7-32/lib/Debug/: z.lib
zlib/zlib-1.2.7-32/lib/Release/: z.lib
zlib/zlib-1.2.7-64/: readme.txt
zlib/zlib-1.2.7-64/lib/Debug/: z.lib
zlib/zlib-1.2.7-64/lib/Release/: z.lib
